interface User {
  id: string;
  email: string;
  username: string;
  is_admin: boolean;
}
